@@ -4,15 +4,17 @@ Hash: SHA256
 AUX wireshark-1.10.1-oldlibs.patch 795 SHA256 2ae88c478ea5c76cbb6eeb6fabb93ed85eba614a3cfa5a906a8989d76d3c2730 SHA512 1b147f3671fc96577612d8ef50b929ca1e255dbdedd47301dbfad964054880804317af5648fbbd2e86cddfd58d0b3560b57f9f62ddababec43b7ab6c52f02d96 WHIRLPOOL e2793c481dc43e1a4430206074a4f566b223d1a0f11f22d6a7ca0479899bf8fee42715b2fd28e9043c060ff1d01e11806ca6b521fa6e7a3ae44c71d2c42e4a33
 AUX wireshark-1.6.13-ldflags.patch 230 SHA256 bb56440fb9de9ed480b992d202feac93a53003e9fa47869f54c6f2f30d315720 SHA512 c4a2c66e6ea9b523ca9f5a3e37411221f5aa630de07d7bf84633855ac44da60b3b493671e578dbfd67de94e87ab1c79203f9b80b57f9460f2a81ee39f58171b3 WHIRLPOOL ca20e190c7a8d7ca69c6d90cfb28f8f1c8896b6793b9a026567ec4df4f7080ca6424ab249d01754db1059891d32362444178272489b4425e895f3031a0e1e0f7
 DIST wireshark-1.10.2.tar.bz2 26667284 SHA256 b7a83314424e13639c591de924aa240bc5f3d9cae01dde69bf858fa04b22a33d SHA512 fd2ad466b122e2044718d8b42d0b323293d2e7fe04af700a1e94d00c720f78ba664e9cdb9a7fb35a13a6f7d99d81e4345482ee8d98b7538972a3f23250a44702 WHIRLPOOL 41ca39120c7a3356bb221f1f2147d5dd278037c47c6613b8e8136e399455f04e16abfde7fd2561f95f4618afd5e9c341c1aff448f160624e6ae4f20f00e2c8d7
+DIST wireshark-1.11.0.tar.bz2 27492409 SHA256 aa38a12b8a52901d9006c80c0a41ec5734f32121e64f8ad80ba51e3b00696260 SHA512 fc8fb4e3ddf17db2b19de9f92ccb94af4a7a790602c9bc01d6255a754911b78f80c954c6b7c573328293c602126d89081216e70ecdd812d85e6a837b4d4a1355 WHIRLPOOL 941e0c5d3e68798f85bde89df394d05213addcb3c92619e24dbc00dff03a58cf82208c510beb46e57224ece4e982dc25cc32d2d82633475ce44a90fc94f5dc3c
 DIST wireshark-1.8.10.tar.bz2 24125925 SHA256 27b67be9c8024c18899f1694698b01b589f3111f673f3e8da62cbe548cd2c242 SHA512 9ca4c320fd537e40a44ea5869217e0748c4cf9bf821a78bc46313621c8f43c5a4a0dd817cd2f919809c9136aefaa1bb7c8295f1cf0f24ddbfb4f7f61a9e996e7 WHIRLPOOL df6c8c5879e807eb8ecc3be6aa6868c57a845a1f68c6afdc2eb2b967556889e88afb280fb66f1417f28dbc1a744b969ac62cdc498b8296bf678c3c37cdb6ad6e
 EBUILD wireshark-1.10.2.ebuild 5677 SHA256 9f98edaeca316c33b1a5d62da296b2fce8eb20b5001a814458cabd1ad7013a51 SHA512 9c2fee49e73b0830af46238558ddd97eb4079be3d00289b89fd340d65154591ee7e6b493f5f5bcfee276179aa22baed8141033076dedcd0890384e77ed61ef88 WHIRLPOOL 1b46ef92012cdccfcf519beb6fc43b5bb9ef5b12ec2b331d58e72a457a9d058f5409e94dce492cf33e5b0d65934ae84ace689ee018f16430ad219791ff36bd74
+EBUILD wireshark-1.11.0.ebuild 5631 SHA256 0f69c1bff057dd2d255ce0c7e720b945a255bcc0d408503d5ef50277a738ed69 SHA512 6b39f0b557c40a58268d6e877f03f8e6f579084c3bad650f05a305aba3ca685c21c6928d63eba943a3dd9588520bec525b79c596f638f1dc46c3bbe70f3667f2 WHIRLPOOL 68f0c6a86b03a8ea9d61ecaceb9abfda50a9c3fea8bfeca665ec6a39609683abeecf6ddb637af4184719592b388abca8eb0d2b26c0fb3afee6b27bd9e084a045
 EBUILD wireshark-1.8.10.ebuild 5484 SHA256 43354d75a1dce48ee212d5d6593fa62816620cbdc40515cda692838f9a61d733 SHA512 dedf57ef8bfc4c49a0aec616b4282963479a294cee54358c4c8dffae410dd17c7892438bf22f44aa01caea198e899b5416817a0b894991fd5d85543e4fd9dff9 WHIRLPOOL 3beeaa34d5bbdd6a6e2b2b74bb2655e15c15716c1750d7fbe5cb57d17c5d53248921650614562eb59ee4ec35b4569a843a44efef34c8799e030eebfde2df6d2a
-MISC ChangeLog 79990 SHA256 c3d6af7a08148fc1ff015da7fdd814104fff2b49b0086da803093131e7f1643f SHA512 357e74d25449115226648ff435d2c4e327196df0fd938f37a42789f2bc8c3e8b0ad6a188edb62823ef78a4ba0112d0fc1c041009bb576180596bdb721c67ce4f WHIRLPOOL a1f19543535f0fe5229606adc6e5cecbe16f44a2bf786a346366faa9900a2f6bd324bb877e1e94d184212e905a4098002bffbb2809567a56d31cb6866acd6f4a
+MISC ChangeLog 80113 SHA256 1714cac520d496bef6d3fc7eeeaf1c34797c53a207f983638e487e9806b65551 SHA512 59738d10482db44f704a1648509fded2037edcb02ecb30655e5fce94472e3105ca776a7b76c3732cd99db455c5e54d3c7713a03b05b69f866cac5515cecbc508 WHIRLPOOL 9050afb5360c5f7981d702480486b70ecfa22c4da8633e17b9139128e29ea1b5feaa29d1843bab47a426ce3d477cdf8e1d119050723c0ec9040f4a3d3e7fa458
 MISC metadata.xml 2662 SHA256 aa3e958ce2704697a912374dfd9df72310353b54883e63de57b1f4e925f804eb SHA512 2eaf02dbd17d346b42dd2ecbb10318c08f8cba0e6bf0cd0dd76f145cc37c1eb35788c4a60d90c42b92c8b7e554315a40046b3b94c5d1a004ebb88650eb296dda WHIRLPOOL 21d6545372ed8aae96efb37f295904a3b14a721e754daf3bab74284d2e7527944fa6c75dc34c3229dea0c815641574f46f72b4b173d0653c6a92bf06341b81a5
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlI0ddIACgkQVWmRsqeSphOA1wCfUhHnfBWcCsTPXOQlvqo50Ita
-lPoAn3i3SqoZZPLyqoS2QMnuHLN6j1s7
-=KmEF
+iEYEAREIAAYFAlJeBSMACgkQVWmRsqeSphMrSQCfSga0m1IJn6PXlLshjLbOQiGd
+KlcAn3grDhjO1/OAnfWwbm+AhXDHG7VP
+=Kwi1
 -----END PGP SIGNATURE-----
