@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/wireshark
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.548 2013/09/14 14:42:24 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.549 2013/10/16 03:16:49 jer Exp $
+
+*wireshark-1.11.0 (16 Oct 2013)
+
+  16 Oct 2013; Jeroen Roovers <jer@gentoo.org> +wireshark-1.11.0.ebuild:
+  Version bump.
 
   14 Sep 2013; Jeroen Roovers <jer@gentoo.org> -wireshark-1.8.9.ebuild,
   -wireshark-1.10.1.ebuild, -files/wireshark-1.8.3-gnutls3.patch,
